fix: deleting schema registry and adding centralize api gateway swagger