@@ -2,36 +2,36 @@ package com.techmarket.orderservice.service.mapper;
 
 import com.techmarket.orderservice.domain.entities.Order;
 import com.techmarket.orderservice.domain.entities.OrderLineItems;
-import com.techmarket.schema.OrderItemEvent;
-import com.techmarket.schema.OrderPlacedEvent;
+import com.techmarket.orderservice.domain.event.OrderItemEvent;
+import com.techmarket.orderservice.domain.event.OrderPlacedEvent;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class OrderEventMapper {
 
     public OrderPlacedEvent toOrderPlacedEvent(Order order) {
-        List<OrderItemEvent> items = order.getOrderLineItemsList().stream()
+        List<OrderItemEvent> items = order.getOrderLineItemsList()
+                .stream()
                 .map(this::toOrderItemEvent)
-                .collect(Collectors.toList());
+                .toList();
 
-        return OrderPlacedEvent.newBuilder()
-                .setEventId(UUID.randomUUID().toString())
-                .setOrderId(order.getOrderId() != null ? order.getOrderId() : 0L)
-                .setOrderNumber(order.getOrderNumber())
-                .setCreatedDate(order.getCreatedDate() != null ? order.getCreatedDate().toString() : "")
-                .setItems(items)
-                .build();
+        return new OrderPlacedEvent(
+                UUID.randomUUID(),
+                order.getOrderId(),
+                order.getOrderNumber(),
+                order.getCreatedDate(),
+                items
+        );
     }
 
     public OrderItemEvent toOrderItemEvent(OrderLineItems item) {
-        return OrderItemEvent.newBuilder()
-                .setSkuCode(item.getSkuCode())
-                .setQuantity(item.getQuantity())
-                .setPrice(item.getPrice() != null ? item.getPrice().toString() : "0")
-                .build();
+        return new OrderItemEvent(
+                item.getSkuCode(),
+                item.getQuantity(),
+                item.getPrice()
+        );
     }
 }
